--- a/indexCss.css
+++ b/indexCss.css
@@ -68,3 +68,39 @@ table th, table td {
     padding: 10px;
     text-align: left;
 }
+@media (max-width: 624px) {
+    body {
+        font-size: 16px;
+        margin: 0;
+    }
+
+    .PreperationTime {
+        margin: 0px;
+        padding: 0px;
+        border-radius: 0;
+    }
+
+    img {
+        width: 100%;
+        border-radius: 0;
+    }
+
+    .PreperationTime,
+    .instructionsStyle,
+    header {
+        padding: 10px;
+        margin: 10px;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+    h2{
+        font-size: small;
+    }
+    table,
+    th,
+    td {
+        font-size: 14px;
+    }
+}
