--- a/indexCss.css
+++ b/indexCss.css
@@ -82,8 +82,8 @@ table th, table td {
         margin:5pt;
     }
     .PreperationTime {
-        margin: 0;
-        padding: 0;
+        margin: 0px;
+        padding: 0px;
     }
 
     .main img {
